; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kperf/extr_kperf_timer.c_kperf_timer_min_pet_period_abstime.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kperf/extr_kperf_timer.c_kperf_timer_min_pet_period_abstime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@min_period_pet_bg_abstime = common dso_local global i32 0, align 4
@min_period_pet_abstime = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @kperf_timer_min_pet_period_abstime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kperf_timer_min_pet_period_abstime() #0 {
  %1 = alloca i32, align 4
  %2 = call i64 (...) @ktrace_background_active()
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = load i32, i32* @min_period_pet_bg_abstime, align 4
  store i32 %5, i32* %1, align 4
  br label %8

6:                                                ; preds = %0
  %7 = load i32, i32* @min_period_pet_abstime, align 4
  store i32 %7, i32* %1, align 4
  br label %8

8:                                                ; preds = %6, %4
  %9 = load i32, i32* %1, align 4
  ret i32 %9
}

declare dso_local i64 @ktrace_background_active(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
